[gd_scene load_steps=18 format=2]

[ext_resource path="res://red hood itch free Copy-Sheet.png" type="Texture" id=1]
[ext_resource path="res://PlayerStuff/Player.gd" type="Script" id=2]
[ext_resource path="res://icon.png" type="Texture" id=3]
[ext_resource path="res://Assets/dogica/OTF/dogica.otf" type="DynamicFontData" id=4]
[ext_resource path="res://PlayerStuff/Player.png" type="Texture" id=5]
[ext_resource path="res://Assets/Audio/vgm-atmospheric-deadspace.mp3" type="AudioStream" id=6]
[ext_resource path="res://Assets/Audio/vgm-atmospheric-below.mp3" type="AudioStream" id=7]
[ext_resource path="res://Assets/Audio/mixkit-quick-positive-video-game-notification-interface-265.wav" type="AudioStream" id=8]
[ext_resource path="res://Assets/Audio/Hit1.wav" type="AudioStream" id=9]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 22.2771, 38.785 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 25.1126, 36.5865 )

[sub_resource type="Animation" id=3]
length = 1.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Female:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 39, 40, 41, 42, 43, 44, 45, 46, 47 ]
}

[sub_resource type="Animation" id=4]
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Female:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=5]
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Female:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 34, 35, 36, 37, 38, 39 ]
}

[sub_resource type="Animation" id=6]
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("Female:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 48, 49, 50, 51 ]
}

[sub_resource type="Animation" id=7]
length = 2.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Female:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4, 1.5, 1.6, 1.7, 1.8, 1.9, 2, 2.1, 2.2, 2.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24 ]
}

[sub_resource type="DynamicFont" id=8]
size = 24
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 4 )

[node name="KinematicBody2D" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="Male" type="Sprite" parent="."]
visible = false
position = Vector2( 0.283448, -0.871181 )
rotation = -3.14159
scale = Vector2( 0.75, -0.75 )
texture = ExtResource( 5 )

[node name="Female" type="Sprite" parent="."]
visible = false
position = Vector2( 1.78177, -36.0814 )
rotation = -3.14159
scale = Vector2( 2.5, -2.5 )
texture = ExtResource( 1 )
hframes = 12
vframes = 11
frame = 47

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -0.899933, 2.82601 )
scale = Vector2( 1, 0.92 )
shape = SubResource( 1 )

[node name="Sprint_timer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="Sprint_CoolDown" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="PositionTimer" type="Timer" parent="."]
wait_time = 0.25
autostart = true

[node name="CoyoteTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 0.887432, 3.08653 )
shape = SubResource( 2 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true
zoom = Vector2( 1.5, 1.5 )
limit_left = -750
limit_top = -854
limit_bottom = 770

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
playback_speed = 2.0
anims/Fall = SubResource( 3 )
anims/Idle = SubResource( 4 )
anims/Jump = SubResource( 5 )
anims/Land = SubResource( 6 )
anims/Walk = SubResource( 7 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="TextureProgress" type="TextureProgress" parent="CanvasLayer"]
show_behind_parent = true
margin_left = 936.247
margin_top = 515.808
margin_right = 1000.25
margin_bottom = 581.808
max_value = 5.0
step = 0.01
texture_under = ExtResource( 3 )
texture_progress = ExtResource( 3 )
fill_mode = 2
tint_under = Color( 1, 0, 0, 1 )
tint_progress = Color( 0.027451, 0.54902, 0.435294, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="CanvasLayer"]
margin_left = 919.814
margin_top = 486.636
margin_right = 1015.81
margin_bottom = 504.636
custom_fonts/font = SubResource( 8 )
text = "Dash"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sounds" type="Node" parent="."]

[node name="DashRecharge" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 8 )
volume_db = -2.529
mix_target = 1

[node name="Death" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 9 )
volume_db = -7.077
pitch_scale = 2.07
mix_target = 1

[node name="SoundPause" type="Timer" parent="Sounds"]
wait_time = 0.08
one_shot = true

[node name="BackgroundMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
volume_db = -5.048
pitch_scale = 0.46
autoplay = true
mix_target = 1

[node name="ShadowMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
volume_db = -5.0
pitch_scale = 0.7
mix_target = 1

[connection signal="timeout" from="Sprint_timer" to="." method="_on_Sprint_timer_timeout"]
[connection signal="timeout" from="Sprint_CoolDown" to="." method="_on_Sprint_CoolDown_timeout"]
[connection signal="timeout" from="PositionTimer" to="." method="_on_PositionTimer_timeout"]
[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="timeout" from="Sounds/SoundPause" to="." method="_on_SoundPause_timeout"]
